New tags and works page styles
> Fixed a bug with the image processing algorithms where they wouldn't find images with different letter cases.
> Added new tags to many works.
> Created a new animation to hide the many tags until the user hovers over them.
> Added content to ds-brand

--- a/styles/style.css
+++ b/styles/style.css
@@ -663,7 +663,7 @@ main .work:active {
 }
 
 .digital-label::after {
-    content: 'DIGITAL GRAPHICS';
+    content: 'DIGITAL DESIGN';
 }
 
 .brand-label {
@@ -816,7 +816,7 @@ section .work:hover .label:after {
 }
 
 section .work:hover .label {
-    width: 14rem;
+    width: 12rem;
 }
 
 /*COPY STYLES ||||||||||||*/
