--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ nav > * {
 /*QUEUE PANE STYLES ||||||||||||*/
 
 #queue .works-tray {
-    overflow-y: scroll;
+    overflow: hidden;
 }
 
 #queue .works-tray::-webkit-scrollbar {
@@ -215,23 +215,16 @@ h5 {
     justify-content: center;
 }
 
-#hello-container {
-    position: absolute;
-}
-
 #hello header,
 #custom-queue header {
     padding: 0;
-    margin-top: 8.9rem;
+    margin-top: 0;
     margin-bottom: 2rem;
 }
 
 .hello-graphic {
-    position: absolute;
-    top: 0;
-    left: 7.5rem;
-    z-index: -1;
-    opacity: 0.9;
+    margin: 0 auto;
+    margin-bottom: -24rem;
 }
 
 #hello header > span,
@@ -386,7 +379,7 @@ main .icon-tray > * + * {
 .queue-container .icon-desc {
     width: 26.25em;
     margin-left: 1em;
-    margin-top: 1.5em;
+    margin-top: 2.5em;
 }
 
 /*PORTFOLIO ICON STYLES ||||||||||||*/
