--- a/styles/style.css
+++ b/styles/style.css
@@ -359,7 +359,7 @@ main .icon-tray > * + * {
 .icon-desc {
     display: block;
     padding-top: 0.5em;
-    color: #FFD980;
+    color: #CFCECD;
 }
 
 .icon-desc {
