Prep for later changes
> Moved querystring analysis to start of page body, in an attempt to make page loading look smoother.
> Added tag buttons to works page.

--- a/styles/style.css
+++ b/styles/style.css
@@ -454,8 +454,15 @@ main .icon-tray > * + * {
 
 /*HELLO ICON STYLES ||||||||||||*/
 
-#hello .portfolio-container {
+.portfolio-container {
     width: 34.5em;
+}
+
+#works .portfolio-container {
+    margin-left: 2rem;
+}
+
+#hello .portfolio-container {
     float: left;
     margin-top: 2rem;
     margin-left: 9rem;
